--- a/src/components/color-palette/color-palette.scss
+++ b/src/components/color-palette/color-palette.scss
@@ -1,9 +1,9 @@
-.color-pallete__wrap {
+.color-palette__wrap {
   display: flex;
   align-items: center;
 }
 
-.color-pallete__view {
+.color-palette__view {
   margin-right: 40px;
   width: 70px;
   height: 70px;
@@ -42,14 +42,14 @@
   }
 }
 
-.color-pallete__title {
+.color-palette__title {
   margin: 0;
   margin-bottom: 8px;
   font-size: 19px;
   font-weight: bold;
 }
 
-.color-pallete__descr {
+.color-palette__descr {
   margin: 0;
   font-size: 19px;
   font-weight: normal;
