--- a/src/pages/404/404.pug
+++ b/src/pages/404/404.pug
@@ -11,7 +11,7 @@ block content
     .container
       .not-found__wrap
         h1.not-found__title Ой!
-        p.not-found__descr Похоже, мы не можем найти нужную вам страницу.
+        p.not-found__description Похоже, мы не можем найти нужную вам страницу.
         p.not-found__status Код ошибки: 404
         ul.not-found__help-links
           li(class="not-found__help-item") Вот несолько полезных ссылок:
