--- a/src/pages/colors-and-type/colors-and-type.pug
+++ b/src/pages/colors-and-type/colors-and-type.pug
@@ -16,43 +16,43 @@ block content
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Dark Shade 100%",
-            descr: "#1F2041",
+            description: "#1F2041",
             variant: "dark-shade-100"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Dark Shade 75%",
-            descr: "#1F2041",
+            description: "#1F2041",
             variant: "dark-shade-75"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Dark Shade 50%",
-            descr: "#1F2041",
+            description: "#1F2041",
             variant: "dark-shade-50"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Dark Shade 25%",
-            descr: "#1F2041",
+            description: "#1F2041",
             variant: "dark-shade-25"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Dark Shade 5%",
-            descr: "#1F2041",
+            description: "#1F2041",
             variant: "dark-shade-5"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Purple",
-            descr: "#BC9CFF",
+            description: "#BC9CFF",
             variant: "purple"
           })
         li.colors-and-type__palette-item
           +colorPalette({
             title: "Green",
-            descr: "#6FCF97",
+            description: "#6FCF97",
             variant: "green"
           })            
       .colors-and-type__typography
