--- a/src/components/color-palette/color-palette.pug
+++ b/src/components/color-palette/color-palette.pug
@@ -1,4 +1,4 @@
-mixin colorPalette({ variant, title, descr })
+mixin colorPalette({ variant, title, description })
   -
     let colorPaletteViewClass = "color-palette__view";
     const variants = [
@@ -20,4 +20,4 @@ mixin colorPalette({ variant, title, descr })
       div(class=colorPaletteViewClass)
       .color-palette__content
         h2.color-palette__title= title
-        p.color-palette__descr= descr
+        p.color-palette__description= description
