--- a/src/components/color-palette/color-palette.scss
+++ b/src/components/color-palette/color-palette.scss
@@ -49,7 +49,7 @@
   font-weight: bold;
 }
 
-.color-palette__descr {
+.color-palette__description {
   margin: 0;
   font-size: 19px;
   font-weight: normal;
