--- a/src/pages/404/404.scss
+++ b/src/pages/404/404.scss
@@ -36,7 +36,7 @@
   font-size: 82px;
 }
 
-.not-found__descr {
+.not-found__description {
   margin: 0 auto;
   margin-bottom: 20px;
   max-width: 480px;
