--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -211,12 +211,12 @@ block content
               items: [
                 {
                   title: "Комфорт",
-                  descr: "Шумопоглощающие стены",
+                  description: "Шумопоглощающие стены",
                   icon: "emoticon"
                 },
                 {
                   title: "Удобство",
-                  descr: "Окно в каждой из спален",
+                  description: "Окно в каждой из спален",
                   icon: "city"
                 }
               ]
