--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -34,17 +34,17 @@ block content
                   items: [
                     {
                       title: "Комфорт",
-                      descr: "Шумопоглощающие стены",
+                      description: "Шумопоглощающие стены",
                       icon: "emoticon"
                     },
                     {
                       title: "Удобство",
-                      descr: "Окно в каждой из спален",
+                      description: "Окно в каждой из спален",
                       icon: "city"
                     },
                     {
                       title: "Уют",
-                      descr: "Номер оснащён камином",
+                      description: "Номер оснащён камином",
                       icon: "whats"
                     }
                   ]
