--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,9 +1,9 @@
-.input-group__wrap {
+.input__wrap {
   display: flex;
   width: 100%;
 
   &:hover {
-    .input-group__input {
+    .input__base {
       border-color: transparentize($contentColor, .25);
 
       &::placeholder {
@@ -11,13 +11,13 @@
       }
     }
 
-    .input-group__button {
+    .input__button {
       border-color: transparentize($contentColor, .25);
     }
   }
 }
 
-.input-group__input {
+.input__base {
   padding: 9px 14px;
   box-sizing: border-box;
   width: 100%;
@@ -41,7 +41,7 @@
       color: transparentize($contentColor, .25);
     }
 
-    + .input-group__button {
+    + .input__button {
       border-color: transparentize($contentColor, .25);
     }
   }
@@ -66,7 +66,7 @@
   }
 }
 
-.input-group__button {
+.input__button {
   padding: 0;
   box-sizing: border-box;
   width: 44px;
