--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -6,7 +6,7 @@ mixin comment(options = {})
       avatarSrc,
       authorName,
       likeCount,
-      likeIsActived,
+      isLikeActive,
       datePost,
       text,
     } = options;
@@ -16,7 +16,7 @@ mixin comment(options = {})
       .comment__column
         .comment__avatar
           img(class="comment__avatar-img" src=avatarSrc alt=authorName)
-        +likebtn({ count: likeCount, isActived: likeIsActived })
+        +likebtn({ count: likeCount, isActived: isLikeActive })
       .comment__column
         p.comment__title= authorName 
         p.comment__date= datePost
