--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -62,7 +62,7 @@ block content
                     authorName: "Мурад Сарафанов",
                     datePost: "5 дней назад",
                     likeCount: 12,
-                    likeIsActived: true,
+                    isLikeActive: true,
                     avatarSrc: "img/avatars/murad.jpg",
                     text:
                       "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
