#12 исправил actived на active

--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -201,7 +201,7 @@
     background-position: 95% 65%;
   }
 
-  &_actived {
+  &_active {
     border-color: transparentize($contentColor, .25);
 
     + .drop-down-input__button {
