--- a/src/components/likebtn/likebtn.pug
+++ b/src/components/likebtn/likebtn.pug
@@ -1,9 +1,9 @@
-mixin likebtn({ count, isActived })
+mixin likebtn({ count, isActive })
   -
     let likeBtnClass = "likebtn__button";
 
-    if (isActived) {
-      likeBtnClass += " likebtn__button_actived";
+    if (isActive) {
+      likeBtnClass += " likebtn__button_active";
     }
 
   .likebtn
