--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -28,7 +28,7 @@
     background: url('../../components/likebtn/like.png') no-repeat;
   }
 
-  &_actived {
+  &_active {
     color: $accentColor;
     border-color: $accentColor;
 
