--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -100,7 +100,7 @@ block content
             .form-elements__like-wrap
               .form-elements__like-btn
                 +likebtn({ count: 2 })
-              +likebtn({ count: 12, isActived: true })
+              +likebtn({ count: 12, isActive: true })
           .form-elements__control
             div(class="form-elements__title-wrap form-elements__title-wrap_bottom-gap")
               +typography({ text: "Rate button", variant: "h3", hasUpper: true })
