--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -16,7 +16,7 @@ mixin comment(options = {})
       .comment__column
         .comment__avatar
           img(class="comment__avatar-img" src=avatarSrc alt=authorName)
-        +likebtn({ count: likeCount, isActived: isLikeActive })
+        +likebtn({ count: likeCount, isActive: isLikeActive })
       .comment__column
         p.comment__title= authorName 
         p.comment__date= datePost
