--- a/src/components/ratebtn/ratebtn.scss
+++ b/src/components/ratebtn/ratebtn.scss
@@ -15,7 +15,7 @@
     margin-right: 0;
   }
 
-  &_actived {
+  &_active {
     background: url('../../components/ratebtn/star-active.png') no-repeat;
   }
 }
