--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -13,6 +13,10 @@
 .auth-page__main {
   background: url('room-interior.jpg') no-repeat;
   background-position: center -70px;
+
+  @media (min-width: 1440px) {
+    background-size: cover;
+  }
 }
 
 .auth-page__wrap {
