--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -15,6 +15,10 @@
 .registration-page__main {
   background: url('room-interior.jpg') no-repeat;
   background-position: center -70px;
+
+  @media (min-width: 1440px) {
+    background-size: cover;
+  }
 }
 
 .registration-page__wrap {
