--- a/src/components/bulleted-list/bulleted-list.scss
+++ b/src/components/bulleted-list/bulleted-list.scss
@@ -1,10 +1,10 @@
-.bullet__list {
+.bulleted-list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.bullet__item {
+.bulleted-list__item {
   position: relative;
   margin-bottom: 10px;
   padding-left: 21px;
