--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -1,14 +1,14 @@
-.checkbox__list {
+.checkbox-list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.checkbox__label {
+.checkbox-list__label {
   cursor: pointer;
 }
 
-.checkbox__title {
+.checkbox-list__title {
   margin: 0;
   padding-left: 30px;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
@@ -18,7 +18,7 @@
   color: transparentize($contentColor, .25);
 }
 
-.checkbox__item {
+.checkbox-list__item {
   margin: 0;
   margin-bottom: 12px;
 
@@ -27,11 +27,11 @@
   }
 }
 
-.checkbox__input[type='checkbox'] {
+.checkbox-list__input[type='checkbox'] {
   display: none;
 }
 
-.checkbox__label-span {
+.checkbox-list__label-span {
   position: relative;
   padding-left: 30px;
   display: block;
@@ -81,13 +81,13 @@
   }
 }
 
-.checkbox__input[type='checkbox']:checked {
-  & + .checkbox__label-span::after {
+.checkbox-list__input[type='checkbox']:checked {
+  & + .checkbox-list__label-span::after {
     visibility: visible;
     opacity: 1;
   }
 
-  & + .checkbox__label-span::before {
+  & + .checkbox-list__label-span::before {
     border-color: $accentColor;
   }
 }
