--- a/src/components/expandable-checkbox/expandable-checkbox.pug
+++ b/src/components/expandable-checkbox/expandable-checkbox.pug
@@ -1,7 +1,7 @@
-include ../checkbox/checkbox
+include ../checkbox-list/checkbox-list
 include ../typography/typography
 
 mixin expandableCheckbox({ summary, items, isOpened })
   details(class="expandable-checkbox" open= isOpened)
     summary.expandable-checkbox__summary= summary
-    +checkbox({ items })
+    +checkboxList({ items })
