#14 заменил section на div в date-picker

--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -1,5 +1,5 @@
 mixin datePicker()
-  section(class="date-picker date-picker_opened date-picker_static")
+  div(class="date-picker date-picker_opened date-picker_static")
     .date-picker__wrap
       .date-picker__control
         button(class="date-picker__slider-btn date-picker__slider-btn_prev" type="button")
