#14 заменил div на article у comment

--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -11,7 +11,7 @@ mixin comment(options = {})
       text,
     } = options;
 
-  .comment
+  article.comment
     .comment__wrap
       .comment__column
         .comment__avatar
