#12 исправил орфографию в rooms

--- a/src/pages/rooms/rooms.pug
+++ b/src/pages/rooms/rooms.pug
@@ -194,7 +194,7 @@ block content
               div(class="drop-down-container  js-drop-down-container")
             .filter__item
               +rangeSlider({ title: "Диапазон цены" })
-              p.filter__explan Стоимость за сутки пребывания в номере
+              p.filter__explain Стоимость за сутки пребывания в номере
             .filter__item
               div(class="filter__title-wrap filter__title-wrap_bottom-gap")
                 +typography({ text: "Правила дома", variant: "h3", hasUpper: true })
