--- a/src/components/main-menu/main-menu.pug
+++ b/src/components/main-menu/main-menu.pug
@@ -22,7 +22,8 @@ mixin mainMenu(menuItems, cssClass)
       ul.main-menu__list
         each item in menuItems
           -
-            const { title, path, subMenu, isActive } = item;
+            const { title, subMenu, isActive } = item;
+            let { path } = item;
             let itemClass = "main-menu__item";
 
             if (subMenu) {
