--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -18,6 +18,7 @@
 
 .form-elements__wrap {
   padding-top: 65px;
+  padding-bottom: 100px;
 }
 
 .form-elements__row {
@@ -25,6 +26,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .form-elements__title-wrap {
